[tool.poetry]
name = "imageapp"
version = "0.1.0"
description = ""
authors = ["Nicola Brisotto <nicolabrisotto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pillow = "^10.0.1"
flask = "2.3.3"
influxdb3-python = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
